MockRequest cleanup: lombok, IDEA